--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,12 @@
 		"start": "node index.js"
 	},
 	"dependencies": {
+		"bcrypt": "^6.0.0",
+		"bcryptjs": "^3.0.3",
+		"cors": "^2.8.5",
 		"express": "^4.18.2",
-		"cors": "^2.8.5"
+		"jsonwebtoken": "^9.0.2",
+		"mongodb": "^6.20.0",
+		"nodemon": "^3.1.10"
 	}
 }
