--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
 	"main": "index.js",
 	"type": "commonjs",
 	"scripts": {
-		"start": "node index.js"
+		"start": "node index.js",
+		"dev": "nodemon index.js"
 	},
 	"dependencies": {
 		"bcrypt": "^6.0.0",
@@ -12,7 +13,9 @@
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.2",
-		"mongodb": "^6.20.0",
-		"nodemon": "^3.1.10"
+		"mongodb": "^6.20.0"
+	},
+	"devDependencies": {
+		"nodemon": "^3.1.11"
 	}
 }
